# tool-router

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml  requirements.txt
.github/workflows/: tests.yml
docs/: integration.md
examples/: tools.yaml
scripts/: latency.py
tests/: test_dynamic.py  test_router.py  test_yaml.py
toolrouter/: __init__.py  embedders.py  embedders_bge.py  embedders_jina.py  hybrid.py  registry.py  rerank.py  router.py  yaml_loader.py
