[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tool-router"
version = "0.1.0"
description = "Pick K tools before they hit the LLM"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "Ma Xiaoming" }]
dependencies = ["numpy", "scikit-learn", "openai>=1.30", "pyyaml"]

[tool.setuptools.packages.find]
include = ["toolrouter*"]
